--- a/app/src/main/res/layout/home_activity_layout.xml
+++ b/app/src/main/res/layout/home_activity_layout.xml
@@ -20,13 +20,11 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp"
-        android:orientation="vertical">
-        <ListView
-            android:id="@+id/manga_list"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
+        android:layout_marginTop="56dp">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lire One Piece"
+            android:onClick="onClick"/>
     </LinearLayout>
-
 </android.support.design.widget.CoordinatorLayout>
