--- a/app/src/main/res/layout/home_activity_layout.xml
+++ b/app/src/main/res/layout/home_activity_layout.xml
@@ -20,7 +20,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="56dp">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
