--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -3,24 +3,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/menu_item_home"
-        android:title="@string/menu_item_home"
-        app:showAsAction="never" />
-
-    <item
         android:id="@+id/menu_item_favorites"
         android:icon="@android:drawable/ic_menu_delete"
         android:title="@string/menu_item_favorites"
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/menu_item_chat"
-        android:title="@string/menu_item_chat"
+        android:id="@+id/menu_item_prefs"
+        android:title="@string/menu_item_prefs"
         app:showAsAction="never" />
 
     <item
-        android:id="@+id/menu_item_history"
-        android:title="@string/menu_item_history"
+        android:id="@+id/menu_item_about"
+        android:title="@string/menu_item_about"
         app:showAsAction="never" />
 
 </menu>
