--- a/app/src/main/res/layout/home_activity_layout.xml
+++ b/app/src/main/res/layout/home_activity_layout.xml
@@ -17,12 +17,14 @@
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
     </android.support.design.widget.AppBarLayout>
 
-    <ListView
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:id="@+id/manga_list"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="5dp">
-    </ListView>
-
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Lire One Piece"
+            android:onClick="onClick"/>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
