--- a/app/src/main/res/layout/favorites_list_layout.xml
+++ b/app/src/main/res/layout/favorites_list_layout.xml
@@ -4,16 +4,17 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    <TextView android:id="@+id/name"
+    <TextView android:id="@+id/name_favoris"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:textSize="16sp"
         android:layout_margin="5dp"/>
 
-    <CheckBox
+    <CheckBox android:id="@+id/checkbox_favoris"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp" />
+        android:layout_margin="5dp"
+        android:onClick="onCheckboxClicked" />
 
 </LinearLayout>
