--- a/app/src/main/res/layout/favorites_layout.xml
+++ b/app/src/main/res/layout/favorites_layout.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -22,8 +21,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <ListView
             android:id="@+id/manga_list"
             android:layout_width="match_parent"
@@ -34,13 +33,11 @@
 
         <Button
             android:id="@+id/validate"
-            android:text="Validate"
+            android:text="@string/validate_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            />
+            android:layout_gravity="center"/>
     </LinearLayout>
-
-
 
 </LinearLayout>
