--- a/app/src/main/res/layout/element_favorite_list.xml
+++ b/app/src/main/res/layout/element_favorite_list.xml
@@ -7,7 +7,7 @@
     <TextView android:id="@+id/name_favoris"
         android:layout_weight="1"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:textSize="16sp"
         android:layout_margin="5dp"/>
 
