--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -10,20 +10,10 @@
         android:orientation="vertical">
 
         <ListView
-            android:id="@+id/manga_favorite_list"
+            android:id="@android:id/list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="9"
-            android:layout_marginBottom="5dp">
+            android:layout_height="wrap_content">
         </ListView>
-
-        <Button
-            android:id="@+id/validate"
-            android:text="@string/validate_button"
-            android:layout_width="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="center"
-            android:layout_height="wrap_content" />
 
     </LinearLayout>
 
