--- a/app/src/main/res/layout-land/fragment_page.xml
+++ b/app/src/main/res/layout-land/fragment_page.xml
@@ -7,7 +7,6 @@
         android:id="@+id/image_manga"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:adjustViewBounds="true"
-        android:layout_gravity="center_vertical"/>
+        android:adjustViewBounds="true" />
 
 </ScrollView>
