--- a/app/src/main/res/layout/element_scan_list.xml
+++ b/app/src/main/res/layout/element_scan_list.xml
@@ -5,10 +5,13 @@
     android:orientation="horizontal">
 
     <TextView android:id="@+id/name_scan"
+        android:paddingLeft="20dp"
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="30dp"
         android:textSize="16sp"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:gravity="center_vertical"
+        />
 
 </LinearLayout>
