--- a/app/src/main/res/layout/fragment_manga.xml
+++ b/app/src/main/res/layout/fragment_manga.xml
@@ -13,8 +13,7 @@
             android:id="@android:id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="9"
-            android:layout_marginBottom="5dp">
+            android:layout_weight="9">
         </ListView>
 
     </LinearLayout>
