--- a/app/src/main/res/layout/main_nav_header.xml
+++ b/app/src/main/res/layout/main_nav_header.xml
@@ -15,11 +15,11 @@
 
     <TextView android:id="@+id/nav_header_title"
         android:layout_weight="1"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginTop="20dp"
-        android:textSize="40sp"
+        android:textSize="38sp"
         android:textColor="@color/textColor"
-        android:text="@string/nav_header_title"/>
+        android:text="@string/app_name"/>
 
 </LinearLayout>
