--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,7 +17,7 @@
             android:icon="@drawable/ic_menu_preferences"
             android:title="Préférences" />
         <item
-            android:id="@+id/about"
+            android:id="@+id/nav_about"
             android:icon="@drawable/ic_menu_about"
             android:title="A propos" />
     </group>
