--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#212634</color>
     <color name="textColor">#88868e</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorSecondary">#c5c6ca</color>
 </resources>
