--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#212634</color>
     <color name="colorPrimaryDark">#212634</color>
     <color name="textColor">#88868e</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#009BBA</color>
     <color name="colorSecondary">#c5c6ca</color>
 </resources>
