--- a/app/src/main/res/layout/element_left_chat_list.xml
+++ b/app/src/main/res/layout/element_left_chat_list.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <TextView
+        android:id="@+id/msg_author"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="35dp"
+        android:layout_marginLeft="5dp"
+        android:includeFontPadding="false"
+        android:fontFamily="sans-serif" />
 
     <TextView
         android:id="@+id/msg_row"
@@ -11,12 +22,11 @@
         android:layout_marginBottom="5dp"
         android:layout_marginRight="35dp"
         android:layout_marginLeft="5dp"
-        android:layout_marginTop="5dp"
         android:background="@drawable/textview_left"
         android:paddingBottom="8dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp"
-        android:text="@string/msg"
-        android:textColor="#000000" />
+        android:includeFontPadding="false"
+        android:textColor="@color/colorPrimaryDark" />
 </LinearLayout>
