--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -1,4 +1,4 @@
-<view.ViewPagerFixed xmlns:android="http://schemas.android.com/apk/res/android"
+<view.CustomViewPager xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
