--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="fragment.AboutFragment"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
@@ -39,23 +38,26 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/about_content"
-                    android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+                    android:layout_marginTop="@dimen/activity_vertical_margin" />
                 <TextView
                     android:id="@+id/about_authors"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/about_authors"
-                    android:layout_marginBottom="@dimen/activity_vertical_margin"
+                    android:layout_marginTop="@dimen/activity_vertical_margin"
                     android:textAlignment="center"/>
             </LinearLayout>
         </ScrollView>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/about_footer"
-            android:textAlignment="center"/>
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:drawableRight="@drawable/ic_favorite_black_24px"
+            android:drawablePadding="2dp"
+            android:drawableTint="@color/colorRed" />
 
     </LinearLayout>
 
