--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="fragment.HistoryFragment">
+    tools:context="historyFragment.HistoryFragment">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
@@ -16,7 +16,10 @@
             android:layout_width="match_parent"
             android:layout_height="20dp"
             android:textSize="16sp"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            android:text="@string/emptyHistoryText"
+            android:textAlignment="center"/>
+
         <ListView
             android:id="@android:id/list"
             android:layout_width="match_parent"
