--- a/app/src/main/res/layout/fragment_manga.xml
+++ b/app/src/main/res/layout/fragment_manga.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="fragment.FavoriteFragment">
+    tools:context="historyFragment.FavoriteFragment">
 
     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
