--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#212634</color>
-    <color name="colorPrimaryDark">#212634</color>
-    <color name="textColor">#88868e</color>
+    <color name="colorPrimary">#102d40</color>
+    <color name="colorPrimaryDark">#102d40</color>
+    <color name="textColor">#ffffff</color>
     <color name="colorAccent">#009BBA</color>
     <color name="colorSecondary">#c5c6ca</color>
 </resources>
