--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="historyFragment.AboutFragment"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -32,32 +33,42 @@
                     android:text="@string/app_name"
                     android:textSize="20sp"
                     android:textAlignment="center"
+                    android:gravity="center"
                     android:layout_marginBottom="@dimen/activity_vertical_margin"/>
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/about_content"
-                    android:layout_marginTop="@dimen/activity_vertical_margin" />
+                    android:layout_marginTop="@dimen/activity_vertical_margin"/>
                 <TextView
                     android:id="@+id/about_authors"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/about_authors"
                     android:layout_marginTop="@dimen/activity_vertical_margin"
-                    android:textAlignment="center"/>
+                    android:textAlignment="center"
+                    android:gravity="center"/>
             </LinearLayout>
         </ScrollView>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/about_footer"
             android:gravity="center"
-            android:layout_gravity="center"
-            android:drawableRight="@drawable/ic_favorite_black_24px"
-            android:drawablePadding="2dp"
-            android:drawableTint="@color/colorRed" />
+            android:layout_gravity="center">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/about_footer" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="2dp"
+                app:srcCompat="@drawable/ic_favorite_black_24px"
+                android:tint="@color/colorRed"/>
+        </LinearLayout>
 
     </LinearLayout>
 
