--- a/app/src/main/res/layout/activity_add_new_manga.xml
+++ b/app/src/main/res/layout/activity_add_new_manga.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="controller.activities.HomeActivity"
+    tools:context="controller.activities.AddNewMangaActivity"
     android:orientation="vertical">
 
     <include
@@ -17,7 +17,7 @@
         android:id="@+id/plugs_list_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="controller.fragments.MangaListFragment"
+        android:name="controller.fragments.AddNewMangaFragment"
         tools:layout="@layout/fragment_manga_list"/>
 
     <!--<include layout="@layout/content_plugs_list" />-->
