--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -12,6 +12,8 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:elevation="4dp"
+        android:theme="@style/CustomToolbarTheme"
+        app:titleTextAppearance="@style/ToolbarTitle"
 
 
 
