--- a/app/src/main/res/layout/fragment_scans.xml
+++ b/app/src/main/res/layout/fragment_scans.xml
@@ -5,7 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_scans"
+        android:scrollbars="vertical"
+        android:clipToPadding="false"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
 
