--- a/app/src/main/res/layout/activity_pager.xml
+++ b/app/src/main/res/layout/activity_pager.xml
@@ -6,13 +6,13 @@
     <ProgressBar
         android:id="@+id/progressBar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="7dp"
         android:max="100"
         android:indeterminate="false"
         android:scaleY="2.5"
         style="?android:attr/progressBarStyleHorizontal"
          />
-    <!--style="?unknown_attr_ref: 1010078"-->
+
     <ui.views.ExtendedViewPager
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
