--- a/app/src/main/res/layout/fragment_scans.xml
+++ b/app/src/main/res/layout/fragment_scans.xml
@@ -5,6 +5,27 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
+
+
+    <ProgressBar
+        android:id="@+id/progress_bar_empty_state"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:indeterminate="true"
+        android:layout_centerInParent="true"
+        />
+
+    <TextView
+        android:id="@+id/text_view_empty_state"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_below="@id/progress_bar_empty_state"
+        android:text="Téléchargement des noms des scans pour ce manga
+Veuillez patienter..."
+        android:textAlignment="center"
+        android:layout_marginTop="30dp"
+        android:layout_centerHorizontal="true"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_scans"
         android:scrollbars="vertical"
