--- a/app/src/main/res/layout/scan_recycler_view_item.xml
+++ b/app/src/main/res/layout/scan_recycler_view_item.xml
@@ -27,6 +27,8 @@
         android:layout_width="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginLeft="5dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:layout_toEndOf="@id/text_view_scan_name"
         android:layout_toRightOf="@id/text_view_scan_name" />
 
