--- a/app/src/main/res/layout/fragment_manga_history.xml
+++ b/app/src/main/res/layout/fragment_manga_history.xml
@@ -5,7 +5,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
-
+    <TextView
+        android:id="@+id/text_view_empty_state"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:text="Pas encore disponible"
+        android:textAlignment="center"
+        android:layout_centerInParent="true"/>
 
 
 
