--- a/app/src/main/res/layout/fragment_manga_list.xml
+++ b/app/src/main/res/layout/fragment_manga_list.xml
@@ -10,7 +10,33 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:clickable="true"
-        android:focusable="true" />
+        android:focusable="true"
+        android:visibility="gone"/>
+
+
+
+    <TextView
+        android:id="@+id/text_view_empty_state"
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="Téléchargement des noms des manga et de leurs icônes
+Veuillez patienter..."
+        android:textAlignment="center"
+
+        android:layout_centerInParent="true"
+        />
+
+    <ProgressBar
+        android:id="@+id/progress_bar_empty_state"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:indeterminate="true"
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/text_view_empty_state"
+        android:layout_centerHorizontal="true"
+        />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view_manga"
