--- a/app/src/main/res/layout/fragment_scans.xml
+++ b/app/src/main/res/layout/fragment_scans.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
-        android:text="Téléchargement des noms des scans pour ce manga
+        android:text="Chargement en cours\n
 Veuillez patienter..."
         android:textAlignment="center"
         android:layout_centerInParent="true" />
