--- a/app/src/main/res/layout/scan_recycler_view_item.xml
+++ b/app/src/main/res/layout/scan_recycler_view_item.xml
@@ -8,7 +8,10 @@
     android:layout_gravity="center"
     android:layout_margin="10dp"
     card_view:cardBackgroundColor="@color/cardview_light_background"
-    card_view:cardCornerRadius="4dp">
+    card_view:cardCornerRadius="4dp"
+    android:foreground="?android:attr/selectableItemBackground"
+    android:clickable="true"
+    android:focusable="true">
 
     <RelativeLayout
         android:id="@+id/relative_layout_scan"
