--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -7,11 +7,17 @@
     <android.support.v7.widget.Toolbar
         android:id="@+id/app_toolbar"
         android:layout_width="match_parent"
-        android:minHeight="?attr/actionBarSize"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
         android:elevation="4dp"
         android:theme="@style/CustomToolbarTheme"
-        app:titleTextAppearance="@style/ToolbarTitle" />
+        app:titleTextAppearance="@style/ToolbarTitle">
+
+        <ImageView
+            android:id="@+id/image_view_toolbar_new_scan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_fiber_new_blue_24dp"
+            android:visibility="gone" />
+    </android.support.v7.widget.Toolbar>
 
 </android.support.design.widget.AppBarLayout>
