--- a/app/src/main/res/layout/manga_recycler_view_item.xml
+++ b/app/src/main/res/layout/manga_recycler_view_item.xml
@@ -2,6 +2,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_manga"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,7 +25,17 @@
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
             android:textSize="16sp"
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@id/image_view_favorite"
             android:layout_centerVertical="true" />
+
+        <ImageView
+            android:id="@+id/image_view_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_star_orange_40dp"
+            android:layout_toStartOf="@id/image_view_manga_icon"
+            android:background="#00000000"/>
 
         <ImageView
             android:id="@+id/image_view_manga_icon"
