--- a/app/src/main/res/layout/fragment_scans.xml
+++ b/app/src/main/res/layout/fragment_scans.xml
@@ -10,6 +10,13 @@
         android:focusable="true"
         android:visibility="gone"/>
 
+    <Button
+        android:id="@+id/meurguez"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="mettre n'importe quoi en last scan"
+        />
+
     <TextView
         android:id="@+id/text_view_loading"
         android:layout_height="wrap_content"
